[gd_scene load_steps=10 format=3 uid="uid://dwd6iobkvqiah"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_cy8ls"]
[ext_resource type="Theme" uid="uid://b0deih8fdao70" path="res://assets/themes/theme_01.tres" id="3_ep55m"]
[ext_resource type="Script" path="res://scripts/GameManger.gd" id="3_swuky"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="4_bhwpl"]
[ext_resource type="Script" path="res://scripts/Commands.gd" id="5_06phl"]
[ext_resource type="Script" path="res://scripts/Events.gd" id="6_axqxg"]
[ext_resource type="Script" path="res://scripts/Places.gd" id="7_sldi0"]
[ext_resource type="Script" path="res://scripts/World.gd" id="8_bucla"]

[sub_resource type="GDScript" id="GDScript_82uow"]
script/source = "extends Node

var stats = {
	\"hp\" : 10,
	\"nick\" : \"jo\",
	\"tired\" : 100,
	\"cur_pos\" : 0,
}

var inventory = {
	\"gold\" : 0,
	\"rock\" : 0,
	\"stick\" : 0
}
"

[node name="Game" type="Node2D"]
script = ExtResource("1_cy8ls")

[node name="GameManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_ep55m")
script = ExtResource("3_swuky")

[node name="Settings" type="Node" parent="GameManager"]
script = ExtResource("4_bhwpl")

[node name="Logs" type="RichTextLabel" parent="GameManager"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 632.0
auto_translate = false
localize_numeral_system = false
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
scroll_following = true
threaded = true

[node name="Input" type="TextEdit" parent="GameManager"]
layout_mode = 0
offset_left = 834.0
offset_top = 560.0
offset_right = 1135.0
offset_bottom = 636.0
auto_translate = false
localize_numeral_system = false
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
wrap_mode = 1
caret_blink = true

[node name="Player" type="Node" parent="GameManager"]
script = SubResource("GDScript_82uow")

[node name="Commands" type="Node" parent="GameManager"]
script = ExtResource("5_06phl")

[node name="Events" type="Node" parent="GameManager"]
script = ExtResource("6_axqxg")

[node name="Places" type="Node" parent="GameManager"]
script = ExtResource("7_sldi0")

[node name="World" type="Node" parent="GameManager"]
script = ExtResource("8_bucla")
