[gd_scene load_steps=24 format=3 uid="uid://mpjlxjskprpi"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_4xvhv"]
[ext_resource type="Resource" uid="uid://dkpmlurv11i1e" path="res://tales/Example/example_tale.tres" id="2_cmhxu"]
[ext_resource type="Theme" uid="uid://b0deih8fdao70" path="res://assets/themes/theme_01.tres" id="3_ep55m"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="4_bhwpl"]
[ext_resource type="PackedScene" uid="uid://balihp4qfx0hg" path="res://scenes/commands.tscn" id="5_1teoh"]
[ext_resource type="Script" path="res://addons/ProjectOdonTool/RichTextEffects/RichTextRoom.gd" id="6_gbbsh"]
[ext_resource type="Script" path="res://addons/ProjectOdonTool/RichTextEffects/RichTextThings.gd" id="7_ijssd"]
[ext_resource type="Script" path="res://addons/ProjectOdonTool/RichTextEffects/RichTextDirection.gd" id="8_euvg3"]
[ext_resource type="Script" path="res://scripts/Node2D.gd" id="8_pbxnv"]
[ext_resource type="PackedScene" uid="uid://diocpp02ookyp" path="res://scenes/music.tscn" id="11_cry38"]
[ext_resource type="Script" path="res://addons/ProjectOdonTool/RichTextEffects/RichTextCommand.gd" id="12_6dn7u"]
[ext_resource type="FontFile" uid="uid://cxig04e4xx42v" path="res://assets/fonts/TA 8 bit.ttf" id="14_5ptin"]
[ext_resource type="Script" path="res://scripts/MapController.gd" id="14_46rgl"]
[ext_resource type="Script" path="res://scripts/Logs.gd" id="14_xjmtx"]
[ext_resource type="PackedScene" uid="uid://cnamp2jhroeno" path="res://scenes/map_tile.tscn" id="15_iqf6m"]

[sub_resource type="RichTextEffect" id="RichTextEffect_q0mw6"]
script = ExtResource("12_6dn7u")

[sub_resource type="RichTextEffect" id="RichTextEffect_im0tk"]
script = ExtResource("6_gbbsh")

[sub_resource type="RichTextEffect" id="RichTextEffect_377yp"]
script = ExtResource("7_ijssd")

[sub_resource type="RichTextEffect" id="RichTextEffect_dvkiy"]
script = ExtResource("8_euvg3")

[sub_resource type="RichTextEffect" id="RichTextEffect_rjs01"]
script = ExtResource("12_6dn7u")

[sub_resource type="RichTextEffect" id="RichTextEffect_57pxg"]
script = ExtResource("6_gbbsh")

[sub_resource type="RichTextEffect" id="RichTextEffect_mrx6c"]
script = ExtResource("7_ijssd")

[sub_resource type="RichTextEffect" id="RichTextEffect_uq07h"]
script = ExtResource("8_euvg3")

[node name="Game" type="Node"]
script = ExtResource("1_4xvhv")
tales = Array[Resource("res://addons/ProjectOdonTool/CustomType/Tale.gd")]([ExtResource("2_cmhxu")])

[node name="Settings" type="Node" parent="."]
script = ExtResource("4_bhwpl")

[node name="CommandHandler" parent="." instance=ExtResource("5_1teoh")]

[node name="Music" parent="." instance=ExtResource("11_cry38")]
unique_name_in_owner = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
theme = ExtResource("3_ep55m")

[node name="Node2D" type="Node2D" parent="UI"]
script = ExtResource("8_pbxnv")

[node name="GreaterThan" type="Label" parent="UI"]
layout_mode = 2
offset_left = 8.0
offset_top = 581.0
offset_right = 728.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 40
text = " >"
vertical_alignment = 1

[node name="Layout" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 768.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI/Layout"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 256.0
size_flags_horizontal = 3

[node name="Map" type="SubViewport" parent="UI/Layout/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(384, 256)
render_target_update_mode = 4
script = ExtResource("14_46rgl")

[node name="Camera2D" type="Camera2D" parent="UI/Layout/SubViewportContainer/Map"]
zoom = Vector2(1.8, 1.8)

[node name="MapTile" parent="UI/Layout/SubViewportContainer/Map" instance=ExtResource("15_iqf6m")]
offset_left = -208.0
offset_top = -144.0
offset_right = -176.0
offset_bottom = -112.0

[node name="Label" type="Label" parent="UI/Layout/SubViewportContainer/Map"]
offset_left = -19.0
offset_top = -11.0
offset_right = 21.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("14_5ptin")
theme_override_font_sizes/font_size = 18
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerContainer" type="Panel" parent="UI/Layout"]
layout_mode = 2
offset_left = 16.0
offset_top = 272.0
offset_right = 368.0
offset_bottom = 448.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Layout/PlayerContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI/Layout/PlayerContainer/VBoxContainer"]
layout_mode = 2
text = "<placeholder (Player Stats)>"

[node name="InventoryContainer" type="Panel" parent="UI/Layout"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -184.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/Layout/InventoryContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
text = "<placeholder (Inventory)>"

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -389.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Logs" type="RichTextLabel" parent="UI/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
bbcode_enabled = true
fit_content = true
scroll_following = true
custom_effects = [SubResource("RichTextEffect_q0mw6"), SubResource("RichTextEffect_im0tk"), SubResource("RichTextEffect_377yp"), SubResource("RichTextEffect_dvkiy")]
threaded = true
visible_characters_behavior = 1
script = ExtResource("14_xjmtx")

[node name="Input" type="TextEdit" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 791.0
offset_top = -67.0
offset_right = -26.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
auto_translate = false
localize_numeral_system = false
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
wrap_mode = 1
caret_blink = true

[node name="CommandHistory" type="Label" parent="UI"]
layout_mode = 0
offset_left = 48.0
offset_top = 576.0
offset_right = 704.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(1, 1, 1, 0.321569)
theme_override_font_sizes/font_size = 26
vertical_alignment = 1

[node name="FakeInputContainer" type="PanelContainer" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 48.0
offset_top = 576.0
offset_right = 768.0
offset_bottom = 648.0

[node name="FakeInput" type="RichTextLabel" parent="UI/FakeInputContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[cmd]ตัวอย่างจ้าอู่ญู้ป่นปี้สระอี๊ฤู"
fit_content = true
scroll_active = false
custom_effects = [SubResource("RichTextEffect_rjs01"), SubResource("RichTextEffect_57pxg"), SubResource("RichTextEffect_mrx6c"), SubResource("RichTextEffect_uq07h")]
threaded = true

[connection signal="world_loaded" from="." to="CommandHandler" method="_on_game_world_loaded"]
[connection signal="text_changed" from="UI/Input" to="." method="_on_input_text_changed"]
